# Examen-Final-Proyecto-paper-ACM-SIGGRAPH

./: .gitignore  CMakeLists.txt  Doxyfile  build.ps1
assets/shaders/: phong_fragment_shader.glsl  phong_vertex_shader.glsl  skybox_vertex_shader.glsl
src/: Untitled-1.cpp  camera.cpp  camera.h  constants.h  glad.c  light.cpp  light.h  lighthouse.cpp  lighthouse.h  main.cpp  mesh.cpp  mesh.h  plane.cpp  plane.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
